--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,10 @@
 [DEFAULT]
 bin = ./ffmpeg.exe
+process_count = 
 
 
 [ffmpeg]
 #bin = C:\Users\Administrator\Downloads\ffmpeg-4.1-win64-static\ffmpeg-4.1-win64-static\bin\ffmpeg.exe
+
+[process]
+process_count = 4
